--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,26 +50,28 @@
     .block.red {
       color: #e53935;
       text-transform: uppercase;
-      font-size: clamp(20px, 5vw, 26px);
+      font-size: clamp(22px, 5.5vw, 28px);
     }
 
     .btn-join {
       display: inline-block;
-      padding: 15px 30px;
-      font-size: clamp(16px, 4vw, 20px);
-      font-weight: bold;
+      padding: 25px 50px;
+      font-size: clamp(20px, 5vw, 26px);
+      font-weight: 900;
       color: #fff;
-      background-color: #28a745;
+      background: linear-gradient(90deg, #28a745, #1e7e34);
       border: none;
-      border-radius: 6px;
+      border-radius: 12px;
       text-decoration: none;
       cursor: pointer;
-      transition: background-color 0.3s ease;
-      margin: 40px 0;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease;
+      margin: 50px 0;
     }
 
     .btn-join:hover {
-      background-color: #218838;
+      transform: scale(1.05);
+      background: linear-gradient(90deg, #34d058, #1e7e34);
     }
 
     .footer-note {
@@ -98,7 +99,7 @@
   <div class="block">Click below to enter the training:</div>
 
   <a href="https://chat.whatsapp.com/ClRlS2YV6d75wBreopGTjH?mode=wwc" 
-     class="btn-join">JOIN THE SESSION</a>
+     class="btn-join">🔥 JOIN THE SESSION NOW 🔥</a>
 
   <div class="footer-note">
     Be sure to click the <strong>JOIN SESSION</strong> button above before you leave this page. 
