Implement tracking for Join Session button
Added tracking for the Join button to monitor clicks.

--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@
 
   <div class="block">Click below to enter the training:</div>
 
+  <!-- ✅ Added tracking for Join Button -->
   <a href="https://chat.whatsapp.com/ClRlS2YV6d75wBreopGTjH?mode=wwc" 
-     class="btn-join">🔥 JOIN THE SESSION NOW 🔥</a>
+     class="btn-join"
+     onclick="ttq.track('ClickButton', {content_name: 'Join Session'});">
+     🔥 JOIN THE SESSION NOW 🔥
+  </a>
 
   <div class="footer-note">
     Be sure to click the <strong>JOIN SESSION</strong> button above before you leave this page. 
