--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
   <div class="block">Click below to enter the training:</div>
 
   <!-- ✅ Added tracking for Join Button -->
-  <a href="https://chat.whatsapp.com/ClRlS2YV6d75wBreopGTjH?mode=wwc" 
-     class="btn-join"
+  <a href="https://chat.whatsapp.com/FHsFMxZuDEyETzZUyM1JyS?mode=wwt"
      onclick="ttq.track('ClickButton', {content_name: 'Join Session'});">
      🔥 JOIN THE SESSION NOW 🔥
   </a>
@@ -121,3 +120,4 @@
 
 </body>
 </html>
+
